# third-harmonic

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
assets/: weird_poisson_results.md
src/: error.rs  lib.rs  main.rs
