[package]
name = "third_harmonic"
version = "0.1.0"
edition = "2024"
description = "3rd harmonic generation"
license = "MIT OR Apache-2.0"
authors = ["fdlgs <fdesloges@hotmail.com>"]
repository = "https://github.com/fdlgs/third_harmonic"
readme = "README.md"


[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
ndarray = { version = "0.17.2", features = ["rayon"] }
ndarray-npy = "0.10.0"
rayon = "1.12.0"
ruviz = { version = "0.4.16", features = ["ndarray_support", "parallel", "simd", "typst-math"] }
scirs2 = "0.4.4"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28"

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing_errors_doc = "allow"

[profile.release]
opt-level = 3        # Maximize speed (default for release)
lto = "fat"          # Full Link Time Optimization
codegen-units = 1    # Single unit for better optimization
panic = "abort"      # Remove unwinding code
strip = true         # Automatically strip symbols from the binary
